objects/Meeting__c.object
<CustomObject>
    <fields>
        <fullName>DESC__c</fullName>
        <label>DESC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RegistrationLayer__c</fullName>
        <label>RegistrationLayer</label>
        <referenceTo>RegistrationLayer__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <formula>IF (DAY( datemeeting__c ) == 1, datemeeting__c - 1, datemeeting__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>datemeeting__c</fullName>
        <label>datemeeting</label>
        <type>Date</type>
    </fields>
    <label>Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>